front-end/src/components/layout/nav/nav.css
@import url("flex-grid");
@import url("margin-padding");

nav {
  @extend %flex, %align-center, %flex-column;

  justify-content: space-evenly;
  background-color: var(--color-bg-2);
  height: var(--nav-height);
  width: var(--nav-width);
  border-right: 1px solid var(--global-color-accent-2);

  & > .logo {
    overflow: visible;

    & > svg {
      overflow: visible;
      width: 131px;
      height: 131px;

      & > g {
        &#side {
          & > path {
            fill: var(--color-fg-1);
            transition: transform 0.5s ease-in-out;
          }
        }
      }

      & > path {
        &#mid {
          fill: var(--global-color-accent-1);
          transition: transform 0.75s ease-in-out;
          transition-delay: 0.5s;
          transform-origin: center center;
        }
      }
    }

    &:hover {
      & > svg {
        & > g {
          &#side {
            & > path {
              &:nth-child(2) {
                transform: translateX(-60px);
              }

              &:nth-child(1) {
                transform: translateX(60px);
              }
            }
          }
        }

        & > path {
          &#mid {
            transform: rotate(360deg);
          }
        }
      }
    }
  }

  & > .nav-items {
    margin-bottom: 4rem;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
    width: inherit;
    list-style: none;

    & > .nav-item {
      width: inherit;
      transition: background-color 0.2s ease-in-out;

      & > a {
        --color: var(--color-fg-2);

        padding: 0.25rem 1rem;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: 1rem;
        width: inherit;
        color: var(--color);
        font-size: var(--font-size-nav);
        font-weight: 300;
        text-decoration: none;
        border-left: 4px solid transparent;
        cursor: pointer;

        & > svg {
          width: 1.5rem;
          height: 1.5rem;

          & path {
            fill: var(--color);
          }
        }
      }

      &:hover {
        background-color: var(--global-color-light-1-30);
      }

      &.active {
        & > a {
          border-color: var(--color-fg-2);
        }
      }
    }
  }

  /* Mobile Nav */
  @media screen and (width <=500px) {
    position: fixed;
    bottom: 0;
    z-index: 11;
    border-top: 1px solid var(--global-color-accent-2);
    border-right: none;

    & > .logo {
      display: none;
    }

    & > .nav-items {
      flex-direction: row;
      justify-content: stretch;
      margin-bottom: 0;
      gap: 0.5rem;

      & > .nav-item {
        display: grid;
        place-items: center;
        width: 100%;

        & > a {
          width: max-content;
          flex-direction: column;
          gap: 0.25rem;

          & > svg {
            width: 1rem;
            height: 1rem;
          }

          &:active,
          &:focus {
            background-color: transparent;
          }
        }

        &.active {
          & > a {
            --color: var(--global-color-accent-2);

            border: none;
          }
        }
      }
    }
  }
}

